<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AboutActivity">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Form"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endg"
        app:layout_constraintStart_toStartOf="@id/startg"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titletextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_openbox_game"
            android:textColor="#4A4A4A"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/application_name"
            android:textColor="@color/gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titletextview" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#4A4A4A"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/titletextview" />


        <TextView
            android:id="@+id/versiontitle"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/version_name"
            android:textColor="@color/gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_1_0v"
            android:textColor="#4A4A4A"
            app:layout_constraintStart_toEndOf="@+id/versiontitle"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/version_code"
            android:textColor="@color/gray"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/versiontitle" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_1v"
            android:textColor="#4A4A4A"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/buttonexitAbout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="#73029C"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="3dp"
            app:strokeColor="#73029C"
            android:text="@string/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>