<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contsrt"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        style="@style/Form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endL"
        app:layout_constraintStart_toStartOf="@id/startL"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_number_of_boxes"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <Spinner
            android:id="@+id/spinnerID"
            style="@style/DefaultSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <CheckBox
            android:id="@+id/timercheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="#00ff00"
            android:text="@string/enable_timer"
            app:layout_constraintStart_toEndOf="@+id/spinnerID"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#73029C"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="3dp"
        app:strokeColor="#73029C"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/contsrt"
        app:layout_constraintTop_toBottomOf="@+id/contsrt" />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="#73029C"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="3dp"
        app:strokeColor="#73029C"        android:textStyle="bold"
        android:text="@string/confirm"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/contsrt"
        app:layout_constraintTop_toBottomOf="@+id/contsrt" />






</androidx.constraintlayout.widget.ConstraintLayout>